# Giants

./: .gitignore  CLAUDE.md  Dockerfile  fly.toml  pyproject.toml  render.yaml
src/giants/: __init__.py  main.py
src/giants/static/css/: style.css
src/giants/templates/: base.html  booking.html  gallery.html  home.html  kids.html  merchandise.html  recipes.html  video.html  wellness.html
tests/: test_main.py
